--- a/requirements.yml
+++ b/requirements.yml
@@ -6,10 +6,10 @@
   version: 0.10.4
 
 - src: galaxyproject.nginx
-  version: 0.7.0
+  version: 0.7.1
 
 - src: galaxyproject.postgresql
-  version: 1.1.1
+  version: 1.1.2
 
 - src: galaxyproject.postgresql_objects
   version: 1.2.0
@@ -17,13 +17,13 @@
 - src: geerlingguy.pip
   version: 2.0.0
 
-- src: uchida.miniconda
-  version: 0.3.0
+- src: galaxyproject.miniconda
+  version: 0.3.1
 
 # - src: usegalaxy_eu.galaxy_systemd
 
 - src: usegalaxy_eu.certbot
-  version: 0.1.5
+  version: 0.1.11
 
 # - src: galaxyproject.proftpd
 
