--- a/tasks/install_galaxy_role_vars.yml
+++ b/tasks/install_galaxy_role_vars.yml
@@ -21,14 +21,14 @@
     galaxy_mutable_config_dir: "{{ laniakea_galaxy_config_dir }}"
     galaxy_config_file: "{{ laniakea_galaxy_config_file }}"
     galaxy_commit_id: "{{ galaxy_version }}"
-    galaxy_config_style: yaml
+      #galaxy_config_style: yaml
 
     galaxy_tusd_port: 1080
     galaxy_server_dir: "{{ laniakea_galaxy_server_dir }}"
 
-    galaxy_manage_systemd: true
-    galaxy_manage_gravity: true
-    galaxy_systemd_mode: gravity
+    galaxy_manage_systemd: "{{ true if __galaxy_major_version is version('22.05', '<=') else false }}"
+      #galaxy_manage_gravity: true
+      #galaxy_systemd_mode: gravity
 
     galaxy_config_templates:
       - src: templates/galaxy/config/job_conf.yml.j2
@@ -104,7 +104,7 @@
         galaxy_root: "{{ galaxy_root }}/server"
         galaxy_user: "{{ laniakea_galaxy_user.name }}"
         virtualenv: "{{ galaxy_venv_dir }}"
-        app_server: gunicorn
+          #app_server: gunicorn
         gunicorn:
           # listening options
           bind: "127.0.0.1:4001"
