--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,5 +16,5 @@ galaxy_info:
 
 dependencies:
   - role: galaxyproject.cvmfs
-  # - role: mtangaro.vault_secrets
-  #   when: retrieve_passphrase_from_vault
+  - role: mtangaro.vault_secrets
+    when: retrieve_passphrase_from_vault
