--- a/tasks/install_galaxy_role_vars.yml
+++ b/tasks/install_galaxy_role_vars.yml
@@ -1,7 +1,7 @@
 ---
 - name: Include galaxy role
   include_role:
-    name: galaxyproject.galaxy
+    name: ansible-galaxy
     public: true
   vars:
     galaxy_virtualenv_command: python3 -m virtualenv
