--- a/tasks/pip_role.yml
+++ b/tasks/pip_role.yml
@@ -2,14 +2,14 @@
 
 - name: '[EL] Include geerlingguy role'  
   include_role:
-    name: geerlingguy.pip
+    name: ansible-role-pip
   vars:
     pip_package: python-pip
   when: ansible_os_family == "RedHat" 
 
 - name: '[Ubuntu] Include geerlingguy role' 
   include_role:
-    name: geerlingguy.pip
+    name: ansible-role-pip
   vars:
     pip_package: python3-pip
   when: ansible_os_family == "Debian"
