--- a/tasks/tusd.yml
+++ b/tasks/tusd.yml
@@ -1,7 +1,7 @@
 ---
 - name: Include tusd role
   include_role:
-    name: galaxyproject.tusd
+    name: ansible-role-tusd
   vars:
     tus_upload_store: "{{ database_path }}/tus"
     galaxy_tusd_port: 1080
