--- a/tasks/install_galaxy_role_vars.yml
+++ b/tasks/install_galaxy_role_vars.yml
@@ -26,7 +26,7 @@
     galaxy_tusd_port: 1080
     galaxy_server_dir: "{{ laniakea_galaxy_server_dir }}"
 
-    galaxy_manage_systemd: "{{ true if __galaxy_major_version is version('22.05', '<=') else false }}"
+    galaxy_manage_systemd: "{{ true if __galaxy_major_version is version('23.0', '<=') else false }}"
       #galaxy_manage_gravity: true
       #galaxy_systemd_mode: gravity
 
@@ -107,7 +107,8 @@
           #app_server: gunicorn
         gunicorn:
           # listening options
-          bind: "127.0.0.1:4001"
+          bind: "unix:{{ galaxy_mutable_config_dir }}/gunicorn.sock"
+          #bind: "127.0.0.1:4001"
           # performance options
           workers: 2
           # Other options that will be passed to gunicorn
