--- a/requirements.yml
+++ b/requirements.yml
@@ -3,7 +3,7 @@
 
 # requirements to install galaxy
 - src: https://github.com/galaxyproject/ansible-galaxy
-  version: 0.10.4
+  version: 0.10.14
 
 - src: https://github.com/galaxyproject/ansible-nginx
   version: 0.7.1
@@ -27,12 +27,12 @@
 
 # - src: galaxyproject.proftpd
 
-- name: https://github.com/galaxyproject/ansible-role-tusd
+- src: https://github.com/galaxyproject/ansible-role-tusd
   version: 0.0.1  
 
 - src: https://github.com/galaxyproject/ansible-cvmfs
   version: 0.2.14
 
-- src: https://github.com/Laniakea-elixir-it/ansible-role-laniakea-galaxy-interactive-tools
+# - src: https://github.com/Laniakea-elixir-it/ansible-role-laniakea-galaxy-interactive-tools
 
 - src: https://github.com/Laniakea-elixir-it/ansible-role-laniakea-cvmfs-client-config
