--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,8 +20,8 @@
 
 - name: Set default job conf
   import_tasks: job_conf.yml
-  become: yes
-  become_user: galaxy
+#  become: yes
+#  become_user: galaxy
 
 - name: include galaxy role
   include: install_galaxy.yml
