--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,11 +20,14 @@
 
 - name: Set default job conf
   import_tasks: job_conf.yml
-#  become: yes
-#  become_user: galaxy
 
 - name: include galaxy role
   include: install_galaxy.yml
+
+  - name: move job conf
+  import_tasks: move_job_conf.yml
+  become: yes
+  become_user: galaxy
 
 - name: Include miniconda role run by galaxy user
   import_tasks: miniconda.yml
