--- a/tasks/admin_user.yml
+++ b/tasks/admin_user.yml
@@ -1,5 +1,12 @@
 ---
-
+- name: Ensure postgresql service running
+  systemd:
+    name: '{{ postgresql_service }}'
+    state: restarted
+    enabled: true
+  become_user: root
+  become_method: sudo
+  
 - name: Query database for user API_KEY 
   become: true
   become_user: postgres
