--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -88,6 +88,7 @@ GALAXY_ADMIN_EMAIL: "admin@server.com"
 #______________________________________
 # Postgres database details
 laniakea_postgresql_version: 15
+postgresql_service: 'postgresql-{{ laniakea_postgresql_version }}'
 
 galaxy_postgresql_objects_users:
   - name: galaxy
