--- a/tasks/install_galaxy_role_vars.yml
+++ b/tasks/install_galaxy_role_vars.yml
@@ -30,9 +30,9 @@
       #galaxy_manage_gravity: true
       #galaxy_systemd_mode: gravity
 
-    galaxy_config_templates:
-      - src: templates/galaxy/config/job_conf.yml.j2
-        dest: "{{ galaxy_config.galaxy.job_config_file }}"
+#    galaxy_config_templates:
+#      - src: templates/galaxy/config/job_conf.yml.j2
+#        dest: "{{ galaxy_config.galaxy.job_config_file }}"
 
     galaxy_config:
       galaxy:
