--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -52,16 +52,10 @@
   meta: flush_handlers
 #
 
-- name: galaxy systemd start
-  systemd:
-    name: galaxy.service
-    state: started
-  when: galaxy_version == "release_23.0"
-
 - name: "[VM] Wait Galaxy"
   wait_for:
     host: 127.0.0.1
-    port: "4001"
+    path: "{{ galaxy_mutable_config_dir }}/gunicorn.sock"
     timeout: 300
 
 - name: create admin user
